Bug 38385 - Failure to read correct border info from OOXML (2nd edition) XLSX files
Summary: Failure to read correct border info from OOXML (2nd edition) XLSX files
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
3.3.2 release
Hardware: Other All
: medium normal
Assignee: Noel Power
URL:
Whiteboard: target:4.1.0 target:4.0.3 target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-16 14:37 UTC by Andreas J Guelzow
Modified: 2013-06-24 16:06 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (3.83 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2012-08-14 19:55 UTC, Andreas J Guelzow
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas J Guelzow 2011-06-16 14:37:19 UTC
OpenOfficeXML (2nd edition) replaced the <left> and <right> child elements of the <border> element with <start> and <end> elements.

LibreOffice Calc appears to ignore the <start> and <end> elements and as a consequence the vertical borders are missing when such a file is imported. 

In the transitional file format <left> and <right> child elements are still permitted so there is no problem with LibreOffice Calc still writing them.
Comment 1 Björn Michaelsen 2011-12-23 12:21:51 UTC
[This is an automated message.]
This bug was filed before the changes to Bugzilla on 2011-10-16. Thus it
started right out as NEW without ever being explicitly confirmed. The bug is
changed to state NEEDINFO for this reason. To move this bug from NEEDINFO back
to NEW please check if the bug still persists with the 3.5.0 beta1 or beta2 prereleases.
Details on how to test the 3.5.0 beta1 can be found at:
http://wiki.documentfoundation.org/QA/BugHunting_Session_3.5.0.-1

more detail on this bulk operation: http://nabble.documentfoundation.org/RFC-Operation-Spamzilla-tp3607474p3607474.html
Comment 2 Andreas J Guelzow 2011-12-23 13:04:19 UTC
I will not waste my time with checking whether this is still true in some recent unreleased version. I filed this report as a service to the LibreOffice user community. I am of course _not_ using LO myself. So if you don't care about these bugs, feel free to close this report.
Comment 3 Florian Reisinger 2012-08-14 13:58:16 UTC
Dear bug submitter!

Due to the fact, that there are a lot of NEEDINFO bugs with no answer within the last six months, we close all of these bugs.

To keep this message short, more infos are available @ https://wiki.documentfoundation.org/QA/NeedinfoClosure#Statement

Thanks for understanding and hopefully updating your bug, so that everything is prepared for developers to fix your problem.

Yours!

Florian
Comment 4 Florian Reisinger 2012-08-14 13:59:33 UTC
Dear bug submitter!

Due to the fact, that there are a lot of NEEDINFO bugs with no answer within the last six months, we close all of these bugs.

To keep this message short, more infos are available @ https://wiki.documentfoundation.org/QA/NeedinfoClosure#Statement

Thanks for understanding and hopefully updating your bug, so that everything is prepared for developers to fix your problem.

Yours!

Florian
Comment 5 Florian Reisinger 2012-08-14 14:04:09 UTC
Dear bug submitter!

Due to the fact, that there are a lot of NEEDINFO bugs with no answer within the last six months, we close all of these bugs.

To keep this message short, more infos are available @ https://wiki.documentfoundation.org/QA/NeedinfoClosure#Statement

Thanks for understanding and hopefully updating your bug, so that everything is prepared for developers to fix your problem.

Yours!

Florian
Comment 6 Florian Reisinger 2012-08-14 14:06:22 UTC
Dear bug submitter!

Due to the fact, that there are a lot of NEEDINFO bugs with no answer within the last six months, we close all of these bugs.

To keep this message short, more infos are available @ https://wiki.documentfoundation.org/QA/NeedinfoClosure#Statement

Thanks for understanding and hopefully updating your bug, so that everything is prepared for developers to fix your problem.

Yours!

Florian
Comment 7 Michael Meeks 2012-08-14 19:04:32 UTC
It would -really- help to have a test document, then I could test it easily without being a domain expert; come to that - so could a QA person :-)
Comment 8 Andreas J Guelzow 2012-08-14 19:55:54 UTC
Created attachment 65564 [details]
sample file

This sample file specifies borders for D5 on all sides:

      <c r="D5" s="1" t="str">
        <v>This cell should have borders on all sides!</v>
      </c>

with


  <borders count="1">
    <border diagonalUp="0" diagonalDown="0">
      <start style="thick">
        <color rgb="FF000000"/>
      </start>
      <end style="thick">
        <color rgb="FF000000"/>
      </end>
      <top style="thick">
        <color rgb="FF000000"/>
      </top>
      <bottom style="thick">
        <color rgb="FF000000"/>
      </bottom>
    </border>
  </borders>

and

  <cellXfs count="2">
    <xf applyAlignment="0" applyBorder="0" applyFont="0" applyFill="0" applyNumberFormat="0" xfId="0"/>
    <xf applyAlignment="1" applyBorder="1" applyFont="1" applyFill="1" applyNumberFormat="1" fontId="0" fillId="0" borderId="0" numFmtId="0" xfId="0">
      <alignment horizontal="general" vertical="bottom" wrapText="1" shrinkToFit="0" textRotation="0" indent="0"/>
    </xf>
  </cellXfs>
Comment 9 Florian Reisinger 2012-08-16 10:47:13 UTC
Set status to New
Comment 10 Michael Stahl 2012-08-20 18:49:47 UTC
hmm... that doesn't look like OpenOffice XML at all...

oh wait, you aren't talking about this format:
http://www.openoffice.org/xml/general.html

but about Microsoft OOXML / XLSX, right?
Comment 11 Kohei Yoshida 2012-08-20 18:55:31 UTC
I think Andreas is referring to the Office Open XML ISO strict format, as opposed to the ECMA version of OOXML.

As I don't work on this filter code myself, I have no idea how well we handle ISO OOXML.
Comment 12 Andreas J Guelzow 2012-08-20 20:58:44 UTC
I am talking about ECMA 376 2nd Edition and 3rd Edition. ECMA 376 2nd Edition is technically aligned with  ISO/IEC 29500.

Note that the problem also occurs in ECMA 376 version 2 transitional format not just the strict format since every strict file satisfies the transitional schema. (In the strict format <left> and <right> are disallowed and replaced by <start> and <end>. In transitional all four: <left>, <right>, <start> and <end> are permitted.

LO seems to ignore <start> and <end> on reading.
Comment 13 Noel Power 2013-02-05 14:26:24 UTC
I suppose I should have assigned myself
Comment 14 Commit Notification 2013-03-13 14:01:47 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8b29f5cb0333c156154adc151a613a547fde4f8f

fix fdo#38385 - accept as valid 'start' and 'end' tokens for lineborders



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2013-03-14 09:20:33 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8a548d2332c162d8713d266ed15aa2ff6e6a2076&h=libreoffice-4-0

fix fdo#38385 - accept as valid 'start' and 'end' tokens for lineborders


It will be available in LibreOffice 4.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2013-03-15 15:27:17 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d2cccde341af33b72378f3e7b0e8dd9ff1cd5e65

follow patch for fdo#38385 attempt to detect rtl



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2013-06-06 14:03:54 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e8321a374366cf348b6e3731bccf4a716b5ae390

Revert "follow patch for fdo#38385 attempt to detect rtl"



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 18 Commit Notification 2013-06-06 14:04:12 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7ef1a64bdb8f9afaeb93e7a88219650381e0d323

another attempt at followon patch for fdo#38385 attempt to detect rtl



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2013-06-07 10:38:17 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ca2be674b105b384208373be8c485b0201134bb0&h=libreoffice-4-1

Revert "follow patch for fdo#38385 attempt to detect rtl"


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 20 Commit Notification 2013-06-07 10:38:36 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6d7dcfe75823e5c7e4b35ba9a05e76749546fe3c&h=libreoffice-4-1

another attempt at followon patch for fdo#38385 attempt to detect rtl


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 21 Noel Power 2013-06-24 16:06:02 UTC
removing bug #56960 I fail to see what this import problem has to do with the mentioned style/format bug