fix fdo#38385 - accept as valid 'start' and 'end' tokens for lineborders

Change-Id: Ie092cc09c9c6e971c4f2020cb3b233ee350752ce